2017-05-12  Carl Hetherington  <cth@carlh.net>

	* Add option for default scale-to (#664).

2017-05-11  Carl Hetherington  <cth@carlh.net>

	* Updated cs_CZ translation from Tomáš Begeni.

	* Add basic export option (#1070).

2017-05-09  Carl Hetherington  <cth@carlh.net>

	* Basic save-as (duplicate) feature (#746).

	* Write a simple cover sheet when making a DCP (#1039).

2017-05-08  Carl Hetherington  <cth@carlh.net>

	* Show multiple tracks in the timeline if there are overlapping subtitles (#941).

	* Various fixes to films with areas of no video content.

2017-05-05  Carl Hetherington  <cth@carlh.net>

	* Warn user if they try to send KDM emails without a configured mail server (#1046).

2017-05-04  Carl Hetherington  <cth@carlh.net>

	* Nag users to backup config.xml if they make a DKDM.

2017-05-03  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.3 released.

2017-05-02  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.2 released.

2017-05-02  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.1 released.

2017-04-30  Carl Hetherington  <cth@carlh.net>

	* Try to improve hints when making a DCP which is not 24 or 48fps.

2017-04-27  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

	* Stop master and server instances fighting over ports, allowing them to coexist (#962).

2017-04-26  Carl Hetherington  <cth@carlh.net>

	* Make a copy of the configuration, if it fails to load, before making new defaults.

2017-04-07  Carl Hetherington  <cth@carlh.net>

	* Make jump-to-content-start on selection in the content list
	optional.

2017-04-03  Carl Hetherington  <cth@carlh.net>

	* Confirm overwrite of existing DCPs when making a new one.

2017-03-07  Carl Hetherington  <cth@carlh.net>

	* Handle failure to write to cinemas file more nicely.

2017-03-03  Carl Hetherington  <cth@carlh.net>

	* Add option to write KDMs to separate folders
	or ZIP files.

2017-02-28  Carl Hetherington  <cth@carlh.net>
